--- a/collaboration.html
+++ b/collaboration.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Terms and Conditions</title>
+    <title>Choose Frequency</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
+    <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
-	<style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -22,7 +22,7 @@
         <p>Loading...</p>
       </div>
     </div>
-	<img class="intro-bg" src="images/intro-bg-1a.jpg" srcset="images/intro-bg-1a.jpg 1x, images/intro-bg-1a.jpg 2x" alt="" width="100%" height="310">
+		<img class="intro-bg" src="images/intro-bg-1a.jpg" srcset="images/intro-bg-1a.jpg 1x, images/intro-bg-1a.jpg 2x" alt="" width="100%" height="310">
     <div class="page">
       <header class="section page-header">
         <!--RD Navbar-->
@@ -35,7 +35,7 @@
                   <li>
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left"><span class="icon text-middle fa-phone"></span></div>
-                      <div class="unit-body"><a href="tel:#">+44 7758748210</a></div>
+                      <div class="unit-body"><a href="tel:#">+44 07758748210</a></div>
                     </div>
                   </li>
                   <li>
@@ -51,7 +51,7 @@
                     </div>
                   </li>
                 </ul>
-               <ul class="social-links">
+				<ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
@@ -83,99 +83,68 @@
                     </ul>
                   </div>
                 </div>
-				
+				<div class="rd-navbar-panel">
+					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
+					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
+				</div>				
               </div>
             </div>
           </nav>
         </div>
       </header>
-      <section class="section section-intro context-dark">
+	  <section class="section section-intro context-dark">
         <div class="intro-bg" style="background: url(images/intro-bg-1.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
-              <h1 class="font-weight-bold wow fadeInLeft">Terms and Conditions</h1>
-			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3></br></br>
+              <h1 class="font-weight-bold wow fadeInLeft">Collaboration</h1>
+              <p class="intro-description wow fadeInRight">Having access to other specialists and being able to collaborate with them helps my clients and allows them to recive the best service.</p>
             </div>
           </div>
         </div>
       </section>
-      <!--Mailform-->
+      <!-- Influence -->
       <section class="section section-md">
         <div class="container">
-          <!--RD Mailform-->
-          <div class="row justify-content-center">
-            <div class="col-xl-8 col-md-8 col-12">
-
-			
-			<div>
-			<h3 class="wow fadeInLeft">My Responsibilities</h3>
-			<p>
-			Provide service to clients solely in those areas in which I am competent to do so and for
-			which I carry relevant professional indemnity insurance. A copy of my insurance is available on
-			request.
-			“Competency” means adequate training, skills and experience but need not exclude treating a client
-			for a condition which the practitioner has not treated before, provided that due diligence and
-			professionalism is observed. 
-			Act in a non-biased, non-prejudicial manner towards all clients, providing those clients with an
-			identical quality of service and treatment irrespective of the many differences which are to be found
-			between clients, including but not restricted to: race, gender, sexual orientation, disability etc.
-			Disclose full details of all relevant memberships, training, experience, qualifications and appropriate
-			avenues of complaint to clients upon request and only use those qualifications and memberships to
-			which they have proof of entitlement.
-			Explain fully to clients in advance of any treatment: the fee levels, precise terms of payment and any
-			charges which might be imposed for non-attendance or cancelled appointments, and wherever
-			relevant, confidentiality issues.
-			Present all services and products in an unambiguous manner (to include any limitations and realistic
-			outcomes of treatment) and ensure that the client retains complete control over the decision to
-			purchase such services or products.  N.B. Guarantees of either a cure or a successful resolution of
-			the problem/s presented shall not be offered.
-			I will adhere to and uphold the code of ethics of the IAPC&amp;M A copy of this code of ethics is also
-			available to the client at all times.
-			</p>
-			</div>
-			<br>
-			<div>
-			<h3 class="wow fadeInLeft">Your Responsibilities</h3>
-			<p>
-			As the Client, you also have responsibilities in your work with me.
-			First, it is your responsibility to turn up for your sessions. When possible, client sessions are set up on
-			a regular schedule, which is not just for the convenience of my scheduling. The regularity of your
-			sessions is an important part of your &quot;inside&quot; work. When circumstances happen that are beyond your
-			control I will work to find a way round this for you.
-			Your second responsibility is to take seriously the work we are doing – to cooperate with requests to
-			do any &quot;homework&quot; given to you, and to spend time between sessions thinking, exploring and
-			experimenting in the areas we are working on together.
-			You are responsible for being as open and honest with us as is possible. At times this may be your
-			greatest challenge in therapy. And it is my pledge to encourage and honour the specific trust involved
-			in your openness with me.
-			You are expected to be free of the influence of alcohol and drugs, except with the specific knowledge
-			and approval of the therapist.
-			<br>
-			Below are terms of the contract:
-			<ul class="ul-bullets">
-			<li>The therapy session will last for aproximatly 60 minutes </li>
-			<li>If the client is late for the appointment, the session cannot be extended  </li>
-			<li>The first session is used as an opportunity to clarify the client’s reason for coming and
-			to take some personal history and details and can be up to 90 minutes long </li>
-			<li>If you are unable to keep an appointment then please give me a call with at least 24 hours
-			notice </li>
-			<li>The full fee will be charged for missed appointments where there is no notification and
-			for sessions cancelled with less than 24 hours notice </li>
-			<li>The service offered is confidential. Brief notes are kept during therapy but these will be
-			stored separately from your personal details and will be in a secure location  </li>
-			<li>Your therapist has regular supervision on a monthly basis  </li>
-			<li>If you give me reason to believe that you will cause other people harm or yourself then
-			I will take the appropriate action on advice from my supervisory body. If you openly confide
-			in me that you are a terrorist, a drug dealer or are involved in money laundering I am duty
-			bound to inform the police </li>
-			</ul>
-			</p>
-			</div>
+          <div class="row row-50 justify-content-center">
+            <div class="col-xl-3 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/nickstolerman.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Nick Stolerman</h4><a href="https://www.nickyogameditation.co.uk/" target="_blank">https://www.nickyogameditation.co.uk/</a>
+                  <p>Yoga and Meditation Teacher.</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>
+			<div class="col-xl-3 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/juliejons.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank"https://cre8-wellbeing.co.uk/</a>
+                  <p>Yoga | Life Coaching | Therapy | Hypnotherapy</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <!--Cta section-->
+      <section class="section section-md" style="background:url(images/bg-image-4-1700x394.jpg) no-repeat; background-size: cover;">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-12 text-center"><span class="text-white d-block cta-big-text font-weight-medium">Still Have Some Questions Left?</span>
+              <h2 class="text-white"><span class="d-block">Get in Touch:<a class="underline-link" href="tel:#"> +44 7758748210</a></span></h2>
+              <p class="text-white">Feel free to contact me to learn more about the services provided.</p>
+			  <a class="button-circle button-default-outline button button-lg button-width-210" href="contacts.html" style="background-color: green;">contact me</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Footer-->
       <footer class="section footer-classic section-sm">
         <div class="container">
           <div class="row row-30">
