--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                       </li>-->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
                       </li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="collaboration.html">Collaboration</a></li>
                     </ul>
                   </div>
                 </div>
@@ -285,7 +285,10 @@
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Pricing Options</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Find the perfect plan for<span class="text-primary"> your soul</span></h3>
 <!--              <p class="wow price">I offer three different pricing plans that can help to fulfill my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>-->
-              <p class="wow price">I offer a first free welcoming session to talk about your needs and goals.<br> We both can check if we can work together and what can be achieved.</p>
+              <p class="wow price">I offer a first free welcoming session to talk about your needs and goals.<br> We both can check if we can work together and what can be achieved.</p
+			  				
+				<p><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></p>
+
             </div>
           </div>
           <div class="row row-30 justify-content-center">
