--- a/thankyou.html
+++ b/thankyou.html
@@ -79,7 +79,7 @@
 					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a></li>-->
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="collaboration.html">Collaboration</a></li>
                     </ul>
                   </div>
                 </div>
