--- a/collaboration.html
+++ b/collaboration.html
@@ -98,7 +98,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
               <h1 class="font-weight-bold wow fadeInLeft">Collaboration</h1>
-              <p class="intro-description wow fadeInRight">Having access to other specialists and being able to collaborate with them helps my clients and allows them to recive the best service.</p>
+              <p class="intro-description wow fadeInRight">Having access to other specialists and being able to collaborate with them helps my clients and allows them to receive the best service.</p>
             </div>
           </div>
         </div>
