--- a/collaboration.html
+++ b/collaboration.html
@@ -123,7 +123,7 @@
                 <div class="team-classic-img"><img src="images/juliejons.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank"https://cre8-wellbeing.co.uk/</a>
+                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank">https://cre8-wellbeing.co.uk/</a>
                   <p>Yoga | Life Coaching | Therapy | Hypnotherapy</p>
                   <hr class="offset-top-40"/>
                 </div>
