--- a/collaboration.html
+++ b/collaboration.html
@@ -140,7 +140,17 @@
                 </div>
               </div>
             </div>		  
-		  
+	    <div class="col-xl-3 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/GraemeWood.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Graeme Wood</h4><a href="https://www.rapidchangehypnosis.co.uk/" target="_blank">https://www.rapidchangehypnosis.co.uk</a>
+                  <p>Rapid Change Hypnotherapist</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>	  
 		  
           </div>
         </div>
