--- a/collaboration.html
+++ b/collaboration.html
@@ -112,7 +112,7 @@
                 <div class="team-classic-img"><img src="images/nickstolerman.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Nick Stolerman</h4><a href="https://www.nickyogameditation.co.uk/" target="_blank">https://www.nickyogameditation.co.uk</a>
+                  <h4 class="font-weight-bold">Nick Stolerman</h4><a href="https://www.nickyogameditation.co.uk/" target="_blank">www.nickyogameditation.co.uk</a>
                   <p>Yoga and Meditation Teacher.</p>
                   <hr class="offset-top-40"/>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="team-classic-img"><img src="images/juliejons.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank">https://cre8-wellbeing.co.uk</a>
+                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank">cre8-wellbeing.co.uk</a>
                   <p>Yoga | Life Coaching | Therapy | Hypnotherapy</p>
                   <hr class="offset-top-40"/>
                 </div>
@@ -134,7 +134,7 @@
                 <div class="team-classic-img"><img src="images/AnnaGrear.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Anna Grear</h4><a href="https://www.hypnocatalyst.com/" target="_blank">https://www.hypnocatalyst.com</a>
+                  <h4 class="font-weight-bold">Anna Grear</h4><a href="https://www.hypnocatalyst.com/" target="_blank">www.hypnocatalyst.com</a>
                   <p>Hypnotherapy LLB (Hons) DLL BCL (Oxon) Dip.Clin.Hyp.NLP.Coach (MCMA) </p>
                   <hr class="offset-top-40"/>
                 </div>
@@ -145,12 +145,23 @@
                 <div class="team-classic-img"><img src="images/GraemeWood.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Graeme Wood</h4><a href="https://www.rapidchangehypnosis.co.uk/" target="_blank">https://www.rapidchangehypnosis.co.uk</a>
+                  <h4 class="font-weight-bold">Graeme Wood</h4><a href="https://www.rapidchangehypnosis.co.uk/" target="_blank">www.rapidchangehypnosis.co.uk</a>
                   <p>Rapid Change Hypnotherapist</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
             </div>	  
+	    <div class="col-xl-3 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/lisawhyte.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Lisa Whyte</h4><a href="https://lisawhytehypno.co.uk/" target="_blank">www.lisawhytehypno.co.uk</a>
+                  <p>Rapid Change Hypnotherapist</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>
 		  
           </div>
         </div>
