--- a/collaboration.html
+++ b/collaboration.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Anna Grear</h4><a href="https://www.hypnocatalyst.com/" target="_blank">www.hypnocatalyst.com</a>
-                  <p>Hypnotherapy LLB (Hons) DLL BCL (Oxon) Dip.Clin.Hyp.NLP.Coach (MCMA) </p>
+                  <p>Hypnotherapy LLB (Hons) DLL BCL (Oxon) Dip.Clin.Hyp.NLP.Coach</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Lisa Whyte</h4><a href="https://lisawhytehypno.co.uk/" target="_blank">www.lisawhytehypno.co.uk</a>
-                  <p>Rapid Change Hypnotherapist</p>
+                  <p>Dip.Hyp Hypnotherapist, NLP practitioner</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
