--- a/collaboration.html
+++ b/collaboration.html
@@ -105,7 +105,7 @@
       </section>
       <!-- Influence -->
       <section class="section section-md">
-        <div class="container">
+        <div class="container collaboration_container">
           <div class="row row-50 justify-content-center">
             <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
