--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                       <div class="unit-body"><a href="#">London UK</a></div>
                     </div>
                   </li>
+
+
                 </ul>
+				<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
@@ -110,11 +113,6 @@
                     </ul>
                   </div>
                 </div>
- 				<div class="rd-navbar-panel">
-					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
-					<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
-				</div>
-			
               </div>
             </div>
           </nav>
@@ -130,6 +128,9 @@
 		  
       <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
         <div class="container">
+			<!--<div class="rd-navbar-panel">
+				<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
+			</div>-->
           <div class="row justify-content-center">
             <div class="col-xl-8 col-12">
               <div class="main-decorated-box text-center text-xl-left">
