--- a/collaboration.html
+++ b/collaboration.html
@@ -51,6 +51,7 @@
                     </div>
                   </li>
                 </ul>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book free session</a>
 				<ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
@@ -83,10 +84,6 @@
                     </ul>
                   </div>
                 </div>
-				<div class="rd-navbar-panel">
-					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
-					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
-				</div>				
               </div>
             </div>
           </nav>
