--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
                 </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book free session</a>
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
