--- a/terms.html
+++ b/terms.html
@@ -51,6 +51,7 @@
                     </div>
                   </li>
                 </ul>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book free session</a>
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
