--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
                 </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book free session</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
@@ -91,10 +91,9 @@
                 <div class="rd-navbar-panel">
                   <!--RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <!--RD Navbar Brand-->
-                  <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
-                  </div>
+				  <div class="book_small">
+					<a class="button button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
+				  </div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -128,12 +127,12 @@
 		  
       <section class="section main-section parallax-scene-js" style="background-image:url('images/bg-1-1700x803.jpg')">
         <div class="container">
-			<!--<div class="rd-navbar-panel">
-				<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
-			</div>-->
           <div class="row justify-content-center">
             <div class="col-xl-8 col-12">
               <div class="main-decorated-box text-center text-xl-left">
+				  <div class="rd-navbar-brand">
+					<!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
+				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span><span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
                 <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
               </div>
@@ -172,7 +171,7 @@
       <section class="section section-sm position-relative" id="about">
         <div class="container">
           <div class="row row-30">
-            <div class="col-lg-6">
+            <div class="col-lg-6 first-picture">
               <div class="block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img src="images/home-1-570x703.jpg" alt="" width="570" height="351"/>
               </div>
             </div>
