--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       </section>
   
       <!--Pricing-->
-      <section id="pricing" class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
+      <section class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-12 text-center col-md-10 col-lg-8">
@@ -291,7 +291,7 @@
 
             </div>
           </div>
-          <div class="row row-30 justify-content-center">
+          <div id="pricing" class="row row-30 justify-content-center">
             <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-dark">
                 <div class="pricing-box-tittle">Starter</div>
@@ -300,7 +300,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol"></span><span class="pricing-box-price">Free</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">get started</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">book</a>
 			   </div>
             </div>
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
@@ -311,7 +311,7 @@
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">79</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">1 session</div>
                 <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
-				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">get started</a>
+				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
             </div>
            <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
