--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                     </div>
                   </li>
                 </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book free session</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
 				<ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>
@@ -65,10 +65,9 @@
                 <div class="rd-navbar-panel">
                   <!--RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <!--RD Navbar Brand-->
-                  <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
-                  </div>
+				  <div class="book_small">
+					<a class="button button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
+				  </div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
@@ -95,6 +94,9 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
+			  <div class="rd-navbar-brand">
+				<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/></a>
+			  </div>			
               <h1 class="font-weight-bold wow fadeInLeft">About Me</h1>
               <p class="intro-description wow fadeInRight">Feel free to learn more about me on this page. I am always happy to help you!</p>
             </div>
