--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="col-xl-8 col-12">
               <div class="main-decorated-box text-center text-xl-left">
 				  <div class="rd-navbar-brand">
-					<!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/><img class="brand-logo-light" src="images/logo-inverse-200x34.png" alt="" width="100" height="17"/></a>
+					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/></a>
 				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span><span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
                 <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
