--- a/collaboration.html
+++ b/collaboration.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Nick Stolerman</h4><a href="https://www.nickyogameditation.co.uk/" target="_blank">www.nickyogameditation.co.uk</a>
-                  <p>Yoga and Meditation Teacher.</p>
+                  <p>Yoga and Meditation Teacher</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
