--- a/collaboration.html
+++ b/collaboration.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Graeme Wood</h4><a href="https://www.rapidchangehypnosis.co.uk/" target="_blank">www.rapidchangehypnosis.co.uk</a>
-                  <p>Rapid Change Hypnotherapist</p>
+                  <p>DipHyp, Breathwork specialist, Creator of The Blitz Protocol, Rapid Change Hypnotherapist</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
@@ -222,8 +222,8 @@
               <P class="footer-classic-title">Quick Links</P>
               <ul class="footer-classic-nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
