--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       </li>
                       <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
                       </li>-->
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank">YouTube</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
                       </li>
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".5s">
                   <div class="box-default">
-                    <div class="box-default-title">Counseling</div>
+                    <div class="box-default-title">Counselling</div>
                     <p class="box-default-description">
 						There are no small problems. 
 						You are not meant to just cope with them. 
@@ -440,8 +440,8 @@
               <P class="footer-classic-title">Quick Links</P>
               <ul class="footer-classic-nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
