--- a/contacts.html
+++ b/contacts.html
@@ -159,8 +159,8 @@
               <P class="footer-classic-title">Quick Links</P>
               <ul class="footer-classic-nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
