--- a/collaboration.html
+++ b/collaboration.html
@@ -162,6 +162,17 @@
                   <hr class="offset-top-40"/>
                 </div>
               </div>
+            </div>		
+	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/HeleneMcGlone.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Helene Mc Glone</h4><a href="https://www.helenemcglone.com/" target="_blank">www.helenemcglone.com</a>
+                  <p>Harmony Hypnotherapist, NLP practitioner</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
             </div>			
 	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
