--- a/collaboration.html
+++ b/collaboration.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Diana Capraro</h4><a href="https://www.powermindclinic.com/" target="_blank">www.powermindclinic.com</a>
-                  <p>CEO of Power Mind Clinic</p>
+                  <p>CEO of Powermind Clinic</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
