--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
                 <div class="section-name wow fadeInRight" data-wow-delay=".2s">About me</div>
                 <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">
 					What I<span class="text-primary"> Do </span>
-					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: right; color: red;"></a>
 				</h3>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
@@ -189,13 +188,20 @@
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
-					might have been triggered by <span class="default-letter-spacing font-weight-bold ">narcissistic abuse</span> or painful experiences. 
+					might have been triggered by narcissistic abuse or painful experiences. 
 					I help my clients to refocus from trauma bond, cognitive dissonance, or narcissistic abuse towards their potential and start exploring its true nature.</p>
+				<p>
+					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: left; color: red;">
+					On my YouTube channel, I share my downloads from the Divine.</a>
+				</p>
+				<p>	
+					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;"> On my Facebook, I explaine examples and easy ways to create your own synchronicities.</a>
+				</p>	
                <div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-               <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
+               <!--<p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
 					Bringing relief to their childhood neglect and showing them how to trust and love.
-					</p>				
+					</p>	-->			
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="300" height="300">
