--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
-					might have been triggered by narcissistic abuse or painful experiences. 
-					I help my clients to refocus from trauma bond, cognitive dissonance, or narcissistic abuse towards their potential and start exploring its true nature.</p>
+					might have been triggered by narcissistic abuse or painful experiences or develop naturally. 
+					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
+					To become masters of their own synchronicities and manifest quicker whatever they desire.</p>
 				<p>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: left; color: red;">
 					On my YouTube channel, I share my downloads from the Divine.</a>
