--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 					On my YouTube channel, I share my downloads from the Divine.</a>
 				</p>
 				<p>	
-					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;"> On my Facebook, I explaine examples and easy ways to create your own synchronicities.</a>
+					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;"> 
+					On my Facebook, I show examples and teach easy ways to create your own synchronicities.</a>
 				</p>	
                <div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
                <!--<p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
