--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
 					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;"> 
 					On my Facebook, I show examples and teach easy ways to create your own synchronicities.</a>
 				</p>	
+				<p>	
+					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: blue;"> 
+					On my Instagram, I use the same feed as on Facebook.</a>
+				</p>	
                <div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
                <!--<p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
