--- a/index.html
+++ b/index.html
@@ -190,20 +190,16 @@
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by narcissistic abuse or painful experiences or develop naturally. 
 					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
-					To become masters of their own synchronicities and manifest quicker whatever they desire.</p>
+					To become create their own synchronicities and manifest quicker whatever they desire.</p>
 				<p>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: left; color: red;">
-					On my YouTube channel, I share my downloads from the Divine.</a>
-				</p>
-				<p>	
-					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;"> 
-					On my Facebook, I show examples and teach easy ways to create your own synchronicities.</a>
+					YouTube: I share my downloads from the Divine.</a><br>
+					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;">
+					Facebook: I show and teach how to create your own synchronicities.<br>
+					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a>
+					
 				</p>	
-				<p>	
-					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: blue;"> 
-					On my Instagram, I use the same feed as on Facebook.</a>
-				</p>	
-               <div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
+               <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
                <!--<p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
 					Bringing relief to their childhood neglect and showing them how to trust and love.
