--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </ul>
 				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
                <ul class="social-links">
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
 				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
@@ -192,7 +192,7 @@
 					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
 					To become create their own synchronicities and manifest quicker whatever they desire.</p>
 				<p>
-					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: left; color: red;">
+					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: I share my downloads from the Divine.</a><br>
 					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;">
 					Facebook: I show and teach how to create your own synchronicities.<br>
@@ -458,7 +458,7 @@
           <div class="footer-classic-aside">
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved.</p>
             <ul class="social-links">
-				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                 <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
                 <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>			
             </ul>
