--- a/terms.html
+++ b/terms.html
@@ -53,7 +53,7 @@
                 </ul>
 				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
                <ul class="social-links">
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
                 </ul>
@@ -77,7 +77,7 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
 					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a></li>-->
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/@choosefrequency">YouTube</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
 					  <li class="rd-nav-item active"><a class="rd-nav-link" href="collaboration.html">Collaboration</a></li>
                     </ul>
@@ -208,7 +208,7 @@
           <div class="footer-classic-aside">
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved.</p>
             <ul class="social-links">
-				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank"></a></li>
+				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                 <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
                 <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>			
             </ul>
